# SimpleEQ

./: .gitignore  CMakeLists.txt
cmake/: cpm.cmake
src/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: CMakeLists.txt
test/src/: SimpleEQTest.cpp
tracy/: CMakeLists.txt
